--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "discovery-dashboard",
   "version": "0.1.0",
+  "license": "Apache-2.0",
   "private": true,
   "engines": {
     "node": ">=20.9.0"
